Fix spacing in permalinks form

--- a/less/modules/permalinks.less
+++ b/less/modules/permalinks.less
@@ -1,5 +1,8 @@
 #permalink-add-form {
 	overflow: hidden;
+	fieldset {
+		margin-bottom: 20px;
+	}
 	.control-group {
 		float: left;
 		width: 25%;
